--- a/content/posts/2018/openshift-update-router-fix.adoc
+++ b/content/posts/2018/openshift-update-router-fix.adoc
@@ -9,7 +9,7 @@ slug: openshift-update-router-fix
 
 == OpenShift Update Router Fix
 
-Updating from v3.11.0 to v3.11.51 introduced a new volume mount on the router that did not previously exist.  Openshift-ansible installer does not yet account for this so your pod may fail to redeploy with the latest image.
+Updating from v3.11.0 to v3.11.51 introduced a new volume mount on the router that did not previously exist (or maybe something wonky just happened in my cluster). 
 
 Log message on router pod attempting to spin up.  If you don't have one attempting to spin up now (i.e. it failed a while back and just rolled back to the previous ReplicationController), delete the latest ReplicationController (not the one running the good pods!) and a new builder pod and router pods will attempt to spin up.
 
