Fixed avatar reference so it doesn't go outside.  Updates to some posts.

--- a/content/posts/2018/oc-tips.adoc
+++ b/content/posts/2018/oc-tips.adoc
@@ -12,4 +12,7 @@ slug: oc-tips
  $ oc login -u system:admin
 
  $ oc whoami --config=$HOME/.kube/config
+ 
+Show all resources... and I mean ALL:
 
+ $ kubectl api-resources --verbs=list --namespaced -o name | xargs -n 1 kubectl get --show-kind --ignore-not-found -n openshift-monitoring
