--- a/content/posts/2019/openshift-auth-all-namespaces-to-a-secured-registry.adoc
+++ b/content/posts/2019/openshift-auth-all-namespaces-to-a-secured-registry.adoc
@@ -13,11 +13,13 @@ If your organization maintains or uses a third-party container registry requirin
 
 Implication: all users have access to these credentials.  They should be read-only.
 
-Recently Red Hat launched a new Container Registry at `registry.redhat.io` requiring authenticated logins.  When you install an OpenShift 3.10 or greater cluster, your default pull registry for the images and templates in the OpenShift namespace will use this registry.  If you tried to run the OpenShift installer without adding the credentials for `oreg_user` and `oreg_user_password`, you would have found that installation will fail.
+Recently Red Hat launched a new Container Registry at `registry.redhat.io` requiring authenticated logins.  When you install an OpenShift 3.10 or greater cluster, your default pull registry for the images and templates in the OpenShift namespace will use this registry.  If you tried to run the OpenShift installer without adding the credentials for `oreg_auth_user` and `oreg_auth_password`, you would have found that installation will fail.
 
 TODO: can you set the credentials inside the docker engine itself on all hosts?  Users would not have access to the credentials this way.
 
 TODO: what is the upgrade process like? Does it fail? Does it swap out the registry.
+
+TODO: image pullthrough and reference policy
 
 The `openshift-ansible` installer playbooks will add your specified credentials to a secret named `imagestreamsecret` in the `openshift` namespace.  This means that any `import-images` into that namespace will use those credentials.  However, due to security and permission policies being isolated between namespaces, when you try to perform an `import-image` from a container image at `registry.redhat.io` in another namespace, you will find it fails with an error showing you have not provided authentication credentials for the registry.  If you execute `oc get secrets` in this other namespace, you will see your common dockerconfig secrets for your internal registry, but not the `imagestreamsecret` for `registry.redhat.io`.  These secrets are created when the namespace is built, and you may notice that every namespace has its own secrets. However, by default your credentials for the `registry.redhat.io` container registry are not copied to other namespaces.  You may like this behavior if you want full control over want images are allowed within your platform, requiring all users to pull only those images available in the `openshift` namespace.  However, you may want to provide your users the freedom to pull any images from approved external catalogs using preset credentials.  Keep in mind that your users are not restricted, in this case, from using the registry with their own provided credentials, unless you have explicity set rules in your local container engine to allow only particular registries and/or deny others.  In other words, if your user has their own credentials, they can create a dockerconfig secret with those credentials in their namespace and successfully pull images from that registry.  If you would like to have the authentication work without further intervention from users, by default during namespace creation, then proceed with the following steps.
 
