--- a/content/posts/2019/add-sshkey-to-ocp42.adoc
+++ b/content/posts/2019/add-sshkey-to-ocp42.adoc
@@ -9,7 +9,7 @@ slug: add-sshkey-to-ocp4
 
 == Add SSH key to OpenShift 4
 
-To add an SSH key if one was not provided during installation:
+To add an SSH key if one was not provided during installation, perform the following from an admin account such as `system:admin`:
 
 [source]
 ---
