--- a/content/posts/2019/openshift-memory.adoc
+++ b/content/posts/2019/openshift-memory.adoc
@@ -7,9 +7,30 @@ language: en
 slug: memory-in-openshift
 ---
 
-= Cgroups, cAdvisor, heapster, hawkular, and docker memory statistics in OpenShift
+== Cgroups, cAdvisor, heapster, hawkular, and docker memory statistics in OpenShift
 
 Work In Progress
+
+ memory.usage_in_bytes      # show current usage for memory
+                 (See 5.5 for details)
+ memory.memsw.usage_in_bytes     # show current usage for memory+Swap
+                 (See 5.5 for details)
+
+memory.stat file includes following statistics
+
+# per-memory cgroup local status
+cache       - # of bytes of page cache memory.
+rss     - # of bytes of anonymous and swap cache memory (includes
+        transparent hugepages).
+rss_huge    - # of bytes of anonymous transparent hugepages.
+mapped_file - # of bytes of mapped file (includes tmpfs/shmem)
+pgpgin      - # of charging events to the memory cgroup. The charging
+        event happens each time a page is accounted as either mapped
+        anon page(RSS) or cache page(Page Cache) to the cgroup.
+pgpgout     - # of uncharging events to the memory cgroup. The uncharging
+        event happens each time a page is unaccounted from the cgroup.
+swap        - # of bytes of swap usage
+
 
 == Linux
 
@@ -47,9 +68,48 @@ Here we see the comment from BEFORE docker made the change, as docker was showin
 
 The difficult part of that comment is that one might read that's the way they continue to do it today.  However, this PR [1] shows that they did bend to the will of those who opened that issue, and they changed the memory report to remove cache.  
 
+  memory.usage_in_bytes and subtracts "cache"
+
+
+ cli/command/container/stats_helpers.go
+
+As of docker 1.18:
+https://github.com/docker/cli/blob/master/cli/command/container/stats_helpers.go#L230
+
+Docker 1.13.x:
+mem = float64(v.MemoryStats.Usage)
+https://github.com/moby/moby/blob/1.13.x/cli/command/container/stats_helpers.go#L116
+https://github.com/moby/moby/blob/1.13.x/vendor/github.com/opencontainers/runc/libcontainer/cgroups/stats.go
+
+
+Docker 1.12.x:
+s.Memory = float64(v.MemoryStats.Usage)
+https://github.com/moby/moby/blob/1.12.x/api/client/container/stats_helpers.go#L122
+https://github.com/moby/moby/blob/1.12.x/vendor/src/github.com/opencontainers/runc/libcontainer/cgroups/stats.go
+https://github.com/moby/moby/blob/1.12.x/docs/admin/runmetrics.md
+https://github.com/moby/moby/blob/1.12.x/docs/reference/commandline/stats.md
+https://github.com/moby/moby/blob/1.12.x/vendor/src/github.com/docker/engine-api/types/stats.go
+
+
 == cAdvisor
 
 cAdvisor reports a full set of comparable metrics read from the kernel cgroups footnote:[https://github.com/google/cadvisor/blob/master/info/v1/container.go#L338-L373]
+
+  only reports memory.usage_in_bytes (VERIFY in code)
+
+
+1. Every 10-30 seconds, the the cAdvisor compiled in to the node collects new metrics from the system by inspecting cgroups, among other things.  These metrics are kept around for exposing via the Kubernetes stats summary API, and Kubernetes stats legacy API.
+
+2. Every `metrics_resolution`, Heapster will query each node via one of the two aforementioned APIs.  I believe the default for OpenShift 3.5 uses the stats summary API (you can confirm by looking at the Heapster RC, and seeing if it uses `--source=kubernetes.summary_api:<some stuff>` (summary) or `--source=kubernetes:<some stuff>` legacy.
+
+  For the summary API, this looks more or less like `curl -H "Authorization: Bearer <Heapster service account token>" https://$NODE_IP:10250/stats/summary`
+
+3. For CPU, Heapster takes the most recent data point of cumulative CPU time and combines it with the new data point to form the CPU usage rate.  Importantly, duplicate batches of metrics, or metrics whose pod start time does not match the previous batch's start time, will cause missing data points here.
+
+4a. kubectl top then queries Heapster at the `/apis/metrics/v1alpha1/namespaces/<somens>/pods` to get metrics for the given pod.
+
+4b. For the dashboard, Heapster pushes each new data batch to Hawkular.  The dashboard the queries Hawkular for metrics.
+
 
 == Heapster
 
@@ -125,92 +185,6 @@ from comment #6
 [3] https://www.kernel.org/doc/Documentation/cgroup-v1/memory.txt
 [4] https://github.com/moby/moby/issues/10824
 https://github.com/google/cadvisor/blob/master/info/v1/container.go#L338-L373
-
-
-
-Cgroups, cAdvisor, heapster, and docker 
-
-master API health stats/summary
------------------------------------------------
-curl -k -H "Authorization: Bearer <redacted>" https://127.0.0.1:10250/stats/summary
-
-cAdvisor 
------------------------------------------------
-  only reports memory.usage_in_bytes (VERIFY in code)
-
-
-1. Every 10-30 seconds, the the cAdvisor compiled in to the node collects new metrics from the system by inspecting cgroups, among other things.  These metrics are kept around for exposing via the Kubernetes stats summary API, and Kubernetes stats legacy API.
-
-2. Every `metrics_resolution`, Heapster will query each node via one of the two aforementioned APIs.  I believe the default for OpenShift 3.5 uses the stats summary API (you can confirm by looking at the Heapster RC, and seeing if it uses `--source=kubernetes.summary_api:<some stuff>` (summary) or `--source=kubernetes:<some stuff>` legacy.
-  
-  For the summary API, this looks more or less like `curl -H "Authorization: Bearer <Heapster service account token>" https://$NODE_IP:10250/stats/summary`
-
-3. For CPU, Heapster takes the most recent data point of cumulative CPU time and combines it with the new data point to form the CPU usage rate.  Importantly, duplicate batches of metrics, or metrics whose pod start time does not match the previous batch's start time, will cause missing data points here.
-
-4a. kubectl top then queries Heapster at the `/apis/metrics/v1alpha1/namespaces/<somens>/pods` to get metrics for the given pod.
-
-4b. For the dashboard, Heapster pushes each new data batch to Hawkular.  The dashboard the queries Hawkular for metrics.
-
-
-docker 
------------------------------------------------
-  memory.usage_in_bytes and subtracts "cache" 
-
-
- cli/command/container/stats_helpers.go
-
-As of docker 1.18:
-https://github.com/docker/cli/blob/master/cli/command/container/stats_helpers.go#L230
-
-Docker 1.13.x:
-mem = float64(v.MemoryStats.Usage)
-https://github.com/moby/moby/blob/1.13.x/cli/command/container/stats_helpers.go#L116
-https://github.com/moby/moby/blob/1.13.x/vendor/github.com/opencontainers/runc/libcontainer/cgroups/stats.go
-
-
-Docker 1.12.x:
-s.Memory = float64(v.MemoryStats.Usage)
-https://github.com/moby/moby/blob/1.12.x/api/client/container/stats_helpers.go#L122
-https://github.com/moby/moby/blob/1.12.x/vendor/src/github.com/opencontainers/runc/libcontainer/cgroups/stats.go
-https://github.com/moby/moby/blob/1.12.x/docs/admin/runmetrics.md
-https://github.com/moby/moby/blob/1.12.x/docs/reference/commandline/stats.md
-https://github.com/moby/moby/blob/1.12.x/vendor/src/github.com/docker/engine-api/types/stats.go
-
-
-heapster
------------------------------------------------  
-
-cgroups
------------------------------------------------
-  memory.usage_in_bytes		 # show current usage for memory
-				 (See 5.5 for details)
- memory.memsw.usage_in_bytes	 # show current usage for memory+Swap
-				 (See 5.5 for details)
-
-emory.stat file includes following statistics
-
-# per-memory cgroup local status
-cache		- # of bytes of page cache memory.
-rss		- # of bytes of anonymous and swap cache memory (includes
-		transparent hugepages).
-rss_huge	- # of bytes of anonymous transparent hugepages.
-mapped_file	- # of bytes of mapped file (includes tmpfs/shmem)
-pgpgin		- # of charging events to the memory cgroup. The charging
-		event happens each time a page is accounted as either mapped
-		anon page(RSS) or cache page(Page Cache) to the cgroup.
-pgpgout		- # of uncharging events to the memory cgroup. The uncharging
-		event happens each time a page is unaccounted from the cgroup.
-swap		- # of bytes of swap usage
-
-
-
-prometheus
------------------------------------------------
-
-crio
------------------------------------------------
-
-
 
 
 With regards to ``docker stats``:
