--- a/content/posts/2019/openshift-prometheus-external-heketi.adoc
+++ b/content/posts/2019/openshift-prometheus-external-heketi.adoc
@@ -219,6 +219,8 @@ Add these lines referring to the heketi dashboard next to the existing entries f
 Your dashboard should be available, and persist restarts.
 
 
-Helpful docs
-https://stackoverflow.com/questions/47691479/listing-all-resources-in-a-namespace
-https://github.com/kubernetes/kubectl/issues/151#issuecomment-402003022
+== Additional Documentation
+
+- https://stackoverflow.com/questions/47691479/listing-all-resources-in-a-namespace
+
+- https://github.com/kubernetes/kubectl/issues/151#issuecomment-402003022
